WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
155374
[AX] SVG element with child desc not exposed
https://bugs.webkit.org/show_bug.cgi?id=155374
Summary
[AX] SVG element with child desc not exposed
Joanmarie Diggs
Reported
2016-03-11 11:43:59 PST
[AX] SVG element with child desc not exposed
Attachments
Patch
(4.98 KB, patch)
2016-03-11 11:48 PST
,
Joanmarie Diggs
no flags
Details
Formatted Diff
Diff
Patch
(6.03 KB, patch)
2016-03-14 08:33 PDT
,
Joanmarie Diggs
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Joanmarie Diggs
Comment 1
2016-03-11 11:48:05 PST
Created
attachment 273750
[details]
Patch
Radar WebKit Bug Importer
Comment 2
2016-03-11 11:49:23 PST
<
rdar://problem/25114469
>
Darin Adler
Comment 3
2016-03-11 13:56:11 PST
Comment on
attachment 273750
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=273750&action=review
> Source/WebCore/accessibility/AccessibilitySVGElement.h:35 > +class AccessibilitySVGElement : public AccessibilityRenderObject {
Since the class is no longer final, best practice would be to mark the overrides of virtual functions here final, instead of override, unless we need to override them further in the derived class. I believe that’s true for *all* the override functions in this class. Further, everything in this class except the constructor that is currently protected seems like it should be private instead.
Joanmarie Diggs
Comment 4
2016-03-14 08:33:34 PDT
Created
attachment 273979
[details]
Patch
Joanmarie Diggs
Comment 5
2016-03-14 09:22:18 PDT
@Darin: Changes made. Thanks for the review! @Chris: Accessibility sanity check? :)
chris fleizach
Comment 6
2016-03-14 09:25:28 PDT
(In reply to
comment #5
)
> @Darin: Changes made. Thanks for the review! > > @Chris: Accessibility sanity check? :)
LGTM
WebKit Commit Bot
Comment 7
2016-03-14 10:18:40 PDT
Comment on
attachment 273979
[details]
Patch Clearing flags on attachment: 273979 Committed
r198137
: <
http://trac.webkit.org/changeset/198137
>
WebKit Commit Bot
Comment 8
2016-03-14 10:18:44 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug