[AX] SVG element with child desc not exposed https://bugs.webkit.org/show_bug.cgi?id=155374

Reviewed by Darin Adler.

Source/WebCore:

Covered by the accessibility/w3c-svg-roles.html test, which was updated.

AccessibilitySVGRoot is now a subclass of AccessibilitySVGElement, which
exposes SVG elements with a child desc element as per the specification.
Also made existing protected methods private.

* accessibility/AccessibilitySVGElement.h:
* accessibility/AccessibilitySVGRoot.cpp:
(WebCore::AccessibilitySVGRoot::AccessibilitySVGRoot):
(WebCore::AccessibilitySVGRoot::parentObject):
* accessibility/AccessibilitySVGRoot.h:

LayoutTests:

* platform/gtk/accessibility/w3c-svg-roles-expected.txt: Updated.
* platform/mac/accessibility/w3c-svg-roles-expected.txt: Updated.


Canonical link: https://commits.webkit.org/173554@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@198137 268f45cc-cd09-0410-ab3c-d52691b4dbfc